tests/lean/elab2.lean.expected.out
@foo.{1 1} nat nat nat.has_add (@zero.{1} nat nat.has_zero) (@one.{1} nat nat.has_one) : nat
elab2.lean:13:6: error: type mismatch at application
  @bla.{1 ?l_1} nat ?m_2 nat.zero bool.tt
term
  bool.tt
has type
  bool
but is expected to have type
  nat
@bla.{1 1} nat bool (@zero.{1} nat nat.has_zero) (@zero.{1} nat nat.has_zero) bool.tt : nat
